--- a/src/components/layout/main-navigation.module.scss
+++ b/src/components/layout/main-navigation.module.scss
@@ -4,6 +4,7 @@
     bottom: 0;
     width: 100%;
     height: 6rem;
+    max-width: 900px;
     ul {
         display: flex;
         justify-content: space-between;
