--- a/src/components/shopping-list/shoppingItem.module.scss
+++ b/src/components/shopping-list/shoppingItem.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: beige;
+    background-color: rgba(221, 243, 237, 0.8);
     margin-bottom: 1rem;
     padding: 2rem;
 }
