--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 :root {
-    font-family: 'Roboto', sans-serif;
-    background-color: rgb(37, 12, 57) ;
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: #2c3d38;
     max-width: 900px;
     margin: auto;
-    border: solid 1px white;
+}
+
+h1, h2 {
+    font-family: 'Lato', sans-serif;
 }
 
