--- a/src/components/layout/main-navigation.module.scss
+++ b/src/components/layout/main-navigation.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/variables.scss';
+
 .container {
     background-color: #a54e76;
     position: fixed;
@@ -26,10 +28,10 @@
 }
 
 .active {
-    background-color: #f0a3b4;
-    color: #a54e76;
+    background-color: $primeColorLight;
+    color: $primeColor;
 }
 
 .inactive {
-    background-color: #a54e76;
+    background-color: $primeColor;
 }
