--- a/src/components/shopping-list/shoppingItem.module.scss
+++ b/src/components/shopping-list/shoppingItem.module.scss
@@ -1,10 +1,14 @@
+@import '/src/styles/variables.scss';
+
 .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(221, 243, 237, 0.8);
+    background-color: #ddf3ed;
     margin-bottom: 1rem;
     padding: 2rem;
+    width: 100%;
+    height: 100px;
 }
 
 .check_icon {
@@ -27,4 +31,24 @@
 
 .other_icon {
     flex-grow: 2;
+}
+
+.delete {
+    background-color: $primeColorLight;
+    height: 100px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.checked_action {
+    background-color: $secondColor;
+    height: 100px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
