--- a/src/components/shopping-list/shoppingItem.module.scss
+++ b/src/components/shopping-list/shoppingItem.module.scss
@@ -9,29 +9,33 @@
     padding: 2rem;
     width: 100%;
     height: 100px;
+    
+    .title {
+        display: flex;
+        align-items: center;
+        width: 50%;
+        gap: 8px;
+
+        h3 {
+        text-align: left;
+        font-size: 18px;
+        padding-top: 4px;
+        color: $baselineColor
+        }
+    }
+
+    
+    .shop_center {
+        display: flex;
+        width: 30%;
+        p {
+            font-size: 14px;
+            color: $baselineColor;
+        }
+        
+    }
 }
 
-.check_icon {
- flex-grow: 1;
-}
-
-.title {
-    flex-grow: 10;
-}
-
-.shop_center {
-    display: flex;
-    justify-content: space-around;
-    flex-grow: 4;
-}
-
-.shop_center ul {
-    display: flex
-}
-
-.other_icon {
-    flex-grow: 2;
-}
 
 .delete {
     background-color: $primeColorLight;
