some minor changes in new form

--- a/src/components/add-new/add-new.module.scss
+++ b/src/components/add-new/add-new.module.scss
@@ -3,7 +3,8 @@
   margin: 120px 1rem;
   .title {
     color: white;
-    margin-bottom: 1rem;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 2rem;
     font-size: 18px;
   }
   .name_input {
